@@ -1,6 +1,6 @@
 #define xstr(s) str(s)
 #define str(s) #s
 
-#define VER_NUMBER 20090609-en
+#define VER_NUMBER 20090611-en
 #define ONS_VERSION xstr(VER_NUMBER)
 #define NSC_VERSION 292
